plans app template update, forms added

--- a/app/templates/#old/plans/matrix_indicator_file.html
+++ b/app/templates/#old/plans/matrix_indicator_file.html
@@ -39,7 +39,7 @@
 
       <div class="row mb-4 gy-3">
         <div class="d-grid col-xl-8">
-          <input type="submit" name="mtrx_indicator_export" value="Сгенерировать индикаторы по дисциплинам" class="btn btn-success">
+          <input type="submit" name="generate_report" value="Сгенерировать индикаторы по дисциплинам" class="btn btn-success">
         </div>
       </div>
     {% endif %}
