--- a/app/templates/plans/matrix_indicator_load.html
+++ b/app/templates/plans/matrix_indicator_load.html
@@ -25,7 +25,7 @@
         </div>
     </div>
 </div>
-<form method="post">
+<form method="post" enctype="multipart/form-data">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-10 col-xl-8">
