--- a/app/templates/programs/title_pages.html
+++ b/app/templates/programs/title_pages.html
@@ -88,7 +88,7 @@
           </div>
           <div class="col-md-6">
             <div class="form-check form-switch mb-2">
-              {{ form.switch_qualification(class="form-check-input", type="checkbox", id="flexSwitchQualification", checked=true) }}
+              {{ form.switch_qualification(class="form-check-input", type="checkbox", id="flexSwitchQualification", checked=True) }}
               {{ form.switch_qualification.label(class="form-check-label", for="flexSwitchQualification") }}
             </div>
             {{ form.wp_qualification(class="form-control mb-2", type="text") }}
