--- a/app/templates/plans/matrix_simple_load.html
+++ b/app/templates/plans/matrix_simple_load.html
@@ -1,108 +1,125 @@
+{% extends 'base.html' %}
+{% block content %}
 <div class="container-fluid">
-    <h3 class="text-center text-dark mb-1">Матрица компетенций (простая)<br></h3>
+  <h3 class="text-center text-dark mb-1">
+    {% block title %}Матрица компетенций (простая){% endblock %}<br>
+  </h3>
 </div>
 <div class="container">
-    <div class="row justify-content-center">
-        <div class="col">
-            <h5 class="fw-normal text-center text-primary mb-3">40.05.01 Правовое обеспечение национальной безопасности<br></h5>
-        </div>
+  <div class="row justify-content-center">
+    <div class="col">
+      <h5 class="fw-normal text-center text-primary mt-2 mb-2">{{ plan_name }}</h5>
     </div>
-    <div class="row justify-content-center mb-3">
-        <div class="col-md-10 col-xl-8">
-            <div class="alert alert-success text-center py-1 mb-1" role="alert" style="opacity: 0.80;">
-              <span class="text-center">Текущий план не содержит связей<br></span>
-            </div>
-            <div class="alert alert-success text-center py-1 mb-1" role="alert" style="opacity: 0.80;">
-              <span>План содержит связи дисциплин и компетенций (перед загрузкой их необходимо очистить)<br></span>
-            </div>
-            <div>
-              <a class="btn btn-light btn-sm border rounded-pill shadow-sm" data-bs-toggle="collapse" aria-expanded="false" aria-controls="collapse-1" href="#collapse-1" role="button">Показать связи</a>
-                <div class="collapse" id="collapse-1">
-                    <p class="fw-bold text-dark" style="margin-bottom: 0;">Б.1.Б.1 Иностранный язык<br></p>
-                    <p class="text-dark" style="white-space: pre-line">ОК-1 - способностью понимать и анализировать мировоззренческие, социально и личностно значимые философские проблемы</p>
-                </div>
+  </div>
+  <div class="row justify-content-center mb-3">
+    <div class="col-md-10 col-xl-8">
+      {% if plan_relations %}
+        <div class="alert alert-info text-center py-1 mb-1" role="alert" style="opacity: 0.80;">
+          <span>План содержит связи дисциплин и компетенций (перед загрузкой их необходимо очистить)<br></span>
+        </div>
+        <div>
+          <a class="btn btn-light btn-sm border rounded-pill shadow-sm" data-bs-toggle="collapse" aria-expanded="false" aria-controls="collapse-1" href="#collapse-1" role="button">Показать связи</a>
+            <div class="collapse" id="collapse-1">
+              {% for relation in plan_relations %}
+              <p class="fw-bold text-dark" style="margin-bottom: 0;">{{ relation }}<br></p>
+              <p class="text-dark" style="white-space: pre-line">{{ "\n".join(plan_relations[relation]) }}</p>
+              {% endfor %}
             </div>
         </div>
+      {% else %}
+        <div class="alert alert-info text-center py-1 mb-1" role="alert" style="opacity: 0.80;">
+          <span class="text-center">Текущий план не содержит связей<br></span>
+        </div>
+      {% endif %}
     </div>
+  </div>
 </div>
 <form method="post" enctype="multipart/form-data">
+  {{ form.hidden_tag() }}
     <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-10 col-xl-8">
+          <div class="row" style="text-align: center;">
+            <div class="col-md-6">
+              {{ form.make_matrix(class="btn btn-primary", style="width: 100%;font-weight: bold;border-style: none;border-color: var(--bs-dark);") }}
+              <small class="form-text" style="text-align: center;">(скачать текущую матрицу в формате Excel)</small>
+            </div>
+            <div class="col-md-6 col-md-4">
+              {{ form.data_delete(class="btn btn-danger", style="width: 100%;font-weight: bold;border-style: none;") }}
+              <small class="form-text">(удаление связей дисциплин и компетенций, и их содержимого из программ)</small>
+            </div>
+          </div>
+        </div>
+      </div>
+      {% if current_user.role in (config.ROLE_ADMIN, ) %}
         <div class="row justify-content-center">
+          <div class="col-md-10 col-xl-8 mb-3">
+            {{ form.file.label(class="form-label", style="color: var(--bs-dark);") }}
+            {{ form.file(class="form-control", style="border-color: var(--bs-gray-400);") }}
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-10 col-xl-8 mb-3">
+            {{ form.file_check(class="btn btn-secondary", style="width: 100%;font-weight: bold;border-style: none;") }}
+          </div>
+          {% if comp_code_errors %}
             <div class="col-md-10 col-xl-8">
-                <div class="row" style="text-align: center;">
-                    <div class="col-md-6">
-                      <button class="btn btn-primary" id="mtrx_download" type="submit" style="width: 100%;font-weight: bold;border-style: none;border-color: var(--bs-dark);" name="mtrx_download">Сформировать матрицу</button>
-                      <small class="form-text" style="text-align: center;">(скачать текущую матрицу в формате Excel)</small>
-                    </div>
-                    <div class="col-md-6 col-md-4">
-                      <button class="btn btn-danger" id="mtrx_delete" type="submit" style="width: 100%;font-weight: bold;border-style: none;" name="mtrx_delete">Полная очистка</button>
-                      <small class="form-text">(удаление связей дисциплин и компетенций, и их содержимого из программ)</small>
-                    </div>
-                </div>
+              <div class="alert alert-danger text-center py-1 mb-1" role="alert" style="opacity: 0.80;">
+                <h6 class="alert-heading fw-bold text-center">Коды компетенций файла, которые не найдены в плане</h6>
+                <span>{{ ', '.join(comp_code_errors) }}</span>
+              </div>
             </div>
+          {% endif %}
         </div>
-        <div class="row justify-content-center">
-            <div class="col-md-10 col-xl-8 mb-3">
-              <label class="form-label" style="color: var(--bs-dark);">Выберите файл Excel для загрузки<br></label>
-              <input class="form-control" type="file" id="formFile" style="border-color: var(--bs-gray-400);" name="file">
-            </div>
-        </div>
-        <div class="row justify-content-center">
-            <div class="col-md-10 col-xl-8 mb-3">
-              <button class="btn btn-secondary" id="mtrx_sim_check" type="submit" style="width: 100%;font-weight: bold;border-style: none;" name="mtrx_sim_check">Проверка файла</button>
-            </div>
+        {% if report %}
+          <div class="row justify-content-center">
             <div class="col-md-10 col-xl-8">
-                <div class="alert alert-danger text-center py-1 mb-1" role="alert" style="opacity: 0.80;">
-                    <h6 class="alert-heading fw-bold text-center">Коды компетенций файла, которые не найдены в плане</h6>
-                  <span>УК-1, УК-2, УК-3<br></span>
+              <div class="card shadow">
+                <div class="card-header py-3">
+                  <p class="text-center text-primary m-0 fw-bold">Связи дисциплин и компетенций из файла:<br></p>
                 </div>
-            </div>
-        </div>
-        <div class="row justify-content-center">
-            <div class="col-md-10 col-xl-8">
-                <div class="card shadow">
-                    <div class="card-header py-3">
-                        <p class="text-center text-primary m-0 fw-bold">Связи дисциплин и компетенций из файла:<br></p>
-                    </div>
-                    <div class="card-body">
-                        <div class="table-responsive table mt-2" id="dataTable-1" role="grid" aria-describedby="dataTable_info">
-                            <table class="table my-0" id="dataTable">
-                                <thead>
-                                    <tr>
-                                        <th>Дисциплина<br></th>
-                                        <th>Компетенции<br></th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>Делопроизводство и режим секретности в органах внутренних дел</td>
-                                        <td>УК-1, ОПК-3, ОПК-4, ОПК-5</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Обеспечение прав человека в деятельности органов внутренних дел</td>
-                                        <td class="fw-bold text-danger">Нет связей в файле</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Административная деятельность полиции</td>
-                                        <td class="fw-bold text-danger">Отсутствует в файле </td>
-                                    </tr>
-                                </tbody>
-                                <tfoot>
-                                    <tr>
-                                        <td><strong>Дисциплина</strong></td>
-                                        <td><strong>Компетенции</strong></td>
-                                    </tr>
-                                </tfoot>
-                            </table>
-                        </div>
-                    </div>
+                <div class="card-body">
+                  <div class="table-responsive table mt-2" id="dataTable-1" role="grid" aria-describedby="dataTable_info">
+                    <table class="table my-0" id="dataTable">
+                      <thead>
+                        <tr>
+                          <th>Дисциплина<br></th>
+                          <th>Компетенции<br></th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        {% for disc in report %}
+                          <tr>
+                            <td>{{ disc }}</td>
+                            {% if report[disc] == ['None'] %}
+                              <td class="fw-bold text-danger">Нет связей в файле</td>
+                            {% elif not report[disc] %}
+                              <td class="fw-bold text-danger">Отсутствует в файле </td>
+                            {% else %}
+                              <td>{{ ', '.join(report[disc]) }}</td>
+                            {% endif %}
+                          </tr>
+                        {% endfor %}
+                      </tbody>
+                      <tfoot>
+                        <tr>
+                          <td><strong>Дисциплина</strong></td>
+                          <td><strong>Компетенции</strong></td>
+                        </tr>
+                      </tfoot>
+                    </table>
+                  </div>
                 </div>
+              </div>
             </div>
-        </div>
+          </div>
+        {% endif %}
         <div class="row justify-content-center mb-2">
-            <div class="col-md-10 col-xl-8 mb-3">
-              <button class="btn btn-success link-light" type="submit" style="background: #008751;width: 100%;font-weight: bold;border-style: none;" name="comp_load" id="mtrx_sim_load">Загрузка компетенций</button>
-            </div>
+          <div class="col-md-10 col-xl-8 mb-3">
+            {{ form.file_load(class="btn btn-success link-light mt-2", style="background: #008751;width: 100%;font-weight: bold;border-style: none;") }}
+          </div>
         </div>
+      {% endif %}
     </div>
 </form>
+{% endblock %}
