--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -83,16 +83,16 @@
                 <i class="fas fa-clipboard-list"></i><span>Программы</span>
               </a>
               <div class="dropdown-menu text-center py-0">
-                <a class="dropdown-item text-center py-1" href="{{ url_for('programs.wp_dept_check') }}">Проверка по кафедре</a>
+                <a class="dropdown-item text-center py-1" href="{{ url_for('programs.dept_check') }}">Проверка по кафедре</a>
                 {% if current_user.role in (config.ROLE_ADMIN, ) %}
-                  <a class="dropdown-item text-center py-1" href="{{ url_for('programs.wp_dates_update') }}">Обновление дат</a>
+                  <a class="dropdown-item text-center py-1" href="{{ url_for('programs.dates_update') }}">Обновление дат</a>
                 {% endif %}
                 {% if current_user.role in (config.ROLE_ADMIN, config.ROLE_METOD, config.ROLE_BIBL) %}
-                  <a class="dropdown-item text-center py-1" href="{{ url_for('programs.wp_fields_choose_plan') }}">Значения полей</a>
+                  <a class="dropdown-item text-center py-1" href="{{ url_for('programs.fields_choose_plan') }}">Значения полей</a>
                 {% endif %}
                 {% if current_user.role in (config.ROLE_ADMIN, config.ROLE_METOD) %}
-                  <a class="dropdown-item text-center py-1" href="{{ url_for('programs.wp_data_choose_plan') }}">Общая информация</a>
-                  <a class="dropdown-item text-center py-1" href="{{ url_for('programs.wp_title_choose_plan') }}">Титульные листы</a>
+                  <a class="dropdown-item text-center py-1" href="{{ url_for('programs.program_data_choose_plan') }}">Общая информация</a>
+                  <a class="dropdown-item text-center py-1" href="{{ url_for('programs.title_pages_choose_plan') }}">Титульные листы</a>
                 {% endif %}
               </div>
             </li>
