--- a/app/templates/programs/dates_update.html
+++ b/app/templates/programs/dates_update.html
@@ -51,7 +51,7 @@
           <div class="row mb-2">
             <div class="col-md-3"></div>
             <div class="col-md-6 mt-3">
-              {{ form.wp_dates_update(class="btn btn-success fw-normal link-light", style="background: #008751;font-weight: bold;border-style: none;width: 100%;", type="submit") }}
+              {{ form.program_dates_update(class="btn btn-success fw-normal link-light", style="background: #008751;font-weight: bold;border-style: none;width: 100%;", type="submit") }}
             </div>
             <div class="col-md-3"></div>
           </div>
