--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -62,7 +62,7 @@
             {% if current_user.is_authenticated and current_user.role in (config.ROLE_ADMIN, config.ROLE_METOD) %}
               <!-- Учебные планы -->
               <li class="nav-item dropdown">
-                <a class="dropdown-toggle nav-link py-2" aria-expanded="false" data-bs-toggle="dropdown" data-bs-auto-close="false" href="#">
+                <a class="dropdown-toggle nav-link py-2" aria-expanded="true" data-bs-toggle="dropdown" data-bs-auto-close="false" href="#">
                   <i class="fas fa-layer-group"></i><span>Учебные планы</span>
                 </a>
                 <div class="dropdown-menu text-center py-0">
