template design update

--- a/app/templates/programs/field_edit.html
+++ b/app/templates/programs/field_edit.html
@@ -26,10 +26,10 @@
             <div class="col">
               <div class="card shadow mb-2">
                 <div class="card-header py-3">
-                  {{ form.program_field_edit.label(class="text-center text-primary m-0 fw-bold") }}
+                  {{ form.field_edit.label(class="text-center text-primary m-0 fw-bold") }}
                 </div>
                 <div class="card-body">
-                  {{ form.program_field_edit(class="form-control", rows="8", value=program_field_data) }}
+                  {{ form.field_edit(class="form-control", rows="8", value=field_data) }}
                 </div>
               </div>
             </div>
