--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -156,7 +156,7 @@
           {% endblock %}
           <!-- Flash сообщения -->
           <div class="container">
-            {% with messages = get_flashed_messages(with_categories=true) %}
+            {% with messages = get_flashed_messages(with_categories=True) %}
               {% if messages %}
                 <div class="row justify-content-center mt-2 mb-2">
                   <div class="col-md-10 col-xl-8 mb-3">
