--- a/app/templates/plans/matrix_indicator_load.html
+++ b/app/templates/plans/matrix_indicator_load.html
@@ -69,65 +69,106 @@
       <div class="col-md-10 col-xl-8 mb-2">
         {{ form.file_check(class="btn btn-secondary", style="width: 100%;font-weight: bold;border-style: none;") }}
       </div>
-      {% if file_errors %}
-        <div class="col-md-10 col-xl-8">
-          <div class="alert alert-danger text-center py-1 mb-1" role="alert" style="opacity: 0.80;">
-            <h6 class="alert-heading fw-bold text-center">Индикаторы файла, которые не удалось прочитать (необходимо исправить):</h6>
-            <span>{{ '\n'.join(file_errors) }}</span>
-          </div>
-        </div>
-      {% endif %}
-      {% if no_comp_list %}
-        <div class="col-md-10 col-xl-8">
-          <div class="alert alert-danger text-center py-1 mb-1" role="alert" style="opacity: 0.80;">
-            <h6 class="alert-heading fw-bold text-center">Коды компетенций файла, которые не найдены в плане</h6>
-            <span>{{ '\n'.join(no_comp_list) }}</span>
-          </div>
-        </div>
-      {% endif %}
-    </div>
-    {% if report %}
-    <div class="row justify-content-center">
       <div class="col-md-10 col-xl-8">
-        <div class="card shadow">
-          <div class="card-header py-3">
-            <p class="text-center text-primary m-0 fw-bold">Связи дисциплин и компетенций из файла:<br></p>
+        {% if program_non_exist %}
+          <div class="alert alert-info text-center py-1 mb-1" role="alert" style="opacity: 0.80;">
+            <h6 class="alert-heading fw-bold text-center">В плане отсутствуют рабочие программы:</h6>
+            {% for disc in program_non_exist %}
+              <span>{{ program_non_exist[disc] }}<br></span>
+            {% endfor %}
           </div>
-          <div class="card-body">
-            <div class="table-responsive table mt-2" id="dataTable-1" role="grid" aria-describedby="dataTable_info">
-              <table class="table my-0" id="dataTable">
-                <thead>
-                  <tr>
-                    <th>Дисциплина<br></th>
-                    <th>Компетенции<br></th>
-                  </tr>
-                </thead>
-                <tbody>
-                  {% for disc in report %}
+        {% endif %}
+        {% if program_duplicate %}
+          <div class="alert alert-warning text-center py-1 mb-1" role="alert" style="opacity: 0.80;">
+            <h6 class="alert-heading fw-bold text-center">В плане существуют дубликаты программ:</h6>
+              {% for disc in program_duplicate %}
+                <span>{{ program_duplicate[disc] }}<br></span>
+              {% endfor %}
+          </div>
+        {% endif %}
+        {% if program_wrong_name %}
+          <div class="alert alert-danger text-center py-1 mb-1" role="alert" style="opacity: 0.80;">
+            <h6 class="alert-heading fw-bold text-center">Название рабочей программы не соответствует названию дисциплины:</h6>
+              {% for disc in program_wrong_name %}
+                <span>План - "{{ program_wrong_name[disc][0] }}"<br></span>
+                <span>Программа - "{{ program_wrong_name[disc][1] }}"<br></span>
+              {% endfor %}
+          </div>
+        {% endif %}
+        {% if program_control_extra_levels %}
+          <div class="alert alert-warning text-center py-1 mb-1" role="alert" style="opacity: 0.80;">
+            <h6 class="alert-heading fw-bold text-center">В рабочей программе больше одного уровня сформированности компетенций:</h6>
+            <span>{{ ', '.join(program_control_extra_levels) }}</span>
+          </div>
+        {% endif %}
+        {% if plan_no_control_data %}
+          <div class="alert alert-danger text-center py-1 mb-1" role="alert" style="opacity: 0.80;">
+            <h6 class="alert-heading fw-bold text-center">В плане отсутствует форма контроля для дисциплины:</h6>
+            <span>{{ '\n'.join(plan_no_control_data) }}</span>
+          </div>
+        {% endif %}
+        {% if indicator_errors %}
+          <div class="alert alert-danger text-center py-1 mb-1" role="alert" style="opacity: 0.80;">
+            <h6 class="alert-heading fw-bold text-center">Индикаторы файла, которые не удалось прочитать:</h6>
+            <span>{{ '\n'.join(indicator_errors) }}</span>
+          </div>
+        {% endif %}
+        {% if comp_not_in_plan %}
+          <div class="alert alert-warning text-center py-1 mb-1" role="alert" style="opacity: 0.80;">
+            <h6 class="alert-heading fw-bold text-center">Коды компетенций файла, которые не найдены в плане</h6>
+            <span>{{ ', '.join(comp_not_in_plan) }}</span>
+          </div>
+        {% endif %}
+        {% if comp_not_in_file %}
+          <div class="alert alert-danger text-center py-1 mb-1" role="alert" style="opacity: 0.80;">
+            <h6 class="alert-heading fw-bold text-center">Коды компетенций плана, которые не найдены в файле</h6>
+            <span>{{ ', '.join(comp_not_in_file) }}</span>
+          </div>
+        {% endif %}
+      </div>
+    </div>
+    {% if match_data %}
+      <div class="row justify-content-center">
+        <div class="col-md-10 col-xl-8">
+          <div class="card shadow">
+            <div class="card-header py-3">
+              <p class="text-center text-primary m-0 fw-bold">Связи дисциплин и компетенций из файла:<br></p>
+            </div>
+            <div class="card-body">
+              <div class="table-responsive table mt-2" id="dataTable-1" role="grid" aria-describedby="dataTable_info">
+                <table class="table my-0" id="dataTable">
+                  <thead>
                     <tr>
-                      <td>{{ disc }}</td>
-                      {% if report[disc] == ['None'] %}
-                        <td class="fw-bold text-danger">Нет связей в файле</td>
-                      {% elif not report[disc] %}
-                        <td class="fw-bold text-danger">Отсутствует в файле </td>
-                      {% else %}
-                        <td>{{ ', '.join(report[disc]) }}</td>
-                      {% endif %}
+                      <th>Дисциплина<br></th>
+                      <th>Компетенции<br></th>
                     </tr>
-                  {% endfor %}
-                </tbody>
-                <tfoot>
-                  <tr>
-                    <td><strong>Дисциплина</strong></td>
-                    <td><strong>Компетенции</strong></td>
-                  </tr>
-                </tfoot>
-              </table>
+                  </thead>
+                  <tbody>
+                    {% for disc in match_data %}
+                      <tr>
+                        <td>{{ disc }}</td>
+                        {% if match_data[disc].get('comps') %}
+                          <td>{{ ', '.join(match_data[disc]['comps']) }}</td>
+                        {% elif 'comps' in match_data[disc] %}
+                          <td class="fw-bold text-danger">Нет связей в файле</td>
+                        {% else %}
+                          <td class="fw-bold text-danger">Отсутствует в файле </td>
+                        {% endif %}
+                      </tr>
+                    {% endfor %}
+                  </tbody>
+                  <tfoot>
+                    <tr>
+                      <td><strong>Дисциплина</strong></td>
+                      <td><strong>Компетенции</strong></td>
+                    </tr>
+                  </tfoot>
+                </table>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
     <div class="row justify-content-center mb-2">
       <div class="col-md-10 col-xl-8 mt-3 mb-3">
         <div class="form-check form-switch">
