--- a/app/templates/plans/matrix_simple_load.html
+++ b/app/templates/plans/matrix_simple_load.html
@@ -66,7 +66,7 @@
           </div>
           {% if comp_not_in_plan %}
             <div class="col-md-10 col-xl-8">
-              <div class="alert alert-danger text-center py-1 mb-1" role="alert" style="opacity: 0.80;">
+              <div class="alert alert-warning text-center py-1 mb-1" role="alert" style="opacity: 0.80;">
                 <h6 class="alert-heading fw-bold text-center">Коды компетенций файла, которые не найдены в плане</h6>
                 <span>{{ ', '.join(comp_not_in_plan) }}</span>
               </div>
